...

    @ViewBuilder
    private func _sidebarView() -> some View {
        PlaylistsView(
            selectedPlaylist: $viewModel.selectedPlaylist
        )
        .accessibilityIdentifier("sidebar")
#if os(macOS)
        .navigationSplitViewColumnWidth(min: 220, ideal: 250, max: 280)
#endif
#if os(iOS)
        .navigationBarTitle(String(localized: "Playlists"))
#endif
...
            .navigationBarTitle(viewModel.selectedPlaylist?.name ?? "")
#endif
        } else {
            VStack {
                Spacer()
                Text("Select a playlist")
                    .accessibilityIdentifier("select-playlist")
                Spacer()
            }
        }
    }

    @ViewBuilder
...
