...

    let action: @MainActor () -> Void

    var body: some View {
#if !os(tvOS)
        Button("Add", systemImage: "plus", role: .none, action: action)
            .accessibilityIdentifier("add")
    #if os(iOS)
            .tint(.primary)
    #endif
    #if os(macOS)
            .buttonStyle(.borderedProminent)
    #endif
...
